--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ convert_case = "0.5.0"
 rand = "0.8.5"
 fnv = "1.0.7"
 slotmap = "1.0.6"
+internment = { version = "0.7.0", features = ["arena"] }
+lasso = "0.6.0"
 
 [profile.dev]
 opt-level = 2
